src/index.css
/************ Custom Font ************/

@font-face {
  font-family: 'Sofia Pro', sans-serif;
  src: url('../public/font/Sofia Pro Regular Az.otf');
  font-weight: 400;
}
@font-face {
  font-family: 'Heading Now Trial';
  src: url('../public/font/HeadingNowTrial-45Medium.ttf');
}


/************ Default Css ************/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /*font-family: 'heading_now_trial45_medium', sans-serif !important;*/


}
/* ЗАГОЛОВКИ */
.MuiTypography-body1{
  font-family: 'Heading Now Trial' !important;
}
.MuiTypography-raleway{
  font-family: 'Raleway', sans-serif;
}
/* ТЕКСТ ПОД КНОПКОЙ */
.MuiTypography-text{
  font-family: 'Sofia Pro', sans-serif ! important;
}
button{
  font-family: 'Heading Now Trial' !important;
}
#root{
  --main: #3652E5;
  --form: rgba(238, 241, 255, 1);
  --animate-duration: 800ms;
  --animate-delay: 0.9s;
  font-family: 'Heading Now Trial' !important;
}
html {
  scroll-behavior: smooth;
  scroll-padding-top: 75px;

}

body {
  font-weight: 400;
  overflow: hidden;
  position: relative;
  height: 100vh;
  /*background-color: #121212 !important;*/
  /*color: #fff !important;*/

}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  padding: 0;
  line-height: normal;
}

p, a, li, button, ul {
  margin: 0;
  padding: 0;
  line-height: normal;
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

img {
  width: 100%;
  height: auto;
}

button {
  border: 0;
  background-color: transparent;
}

input:focus, textarea:focus, select:focus {
  outline: none;
}

@media (min-width:1700px) {
  main .container {
    max-width: 100%;
    padding: 0 150px;
  }
}

p.success {
  color: green;
}

p.danger {
  color: red;
}

/*MUI*/

